tar (child): xz: Cannot exec: No such file or directory

--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -11,7 +11,7 @@ WORKDIR /usr/local/filebot-node
 
 
 RUN apt-get update \
- && apt-get install -y nodejs \
+ && apt-get install -y nodejs xz-utils \
  && rm -rf /var/lib/apt/lists/*
 
 
