--- a/Dockerfile.graalvm
+++ b/Dockerfile.graalvm
@@ -3,9 +3,9 @@ FROM oracle/graalvm-ce:latest
 MAINTAINER Reinhard Pointner <rednoah@filebot.net>
 
 
-ENV FILEBOT_VERSION 4.8.6
-ENV FILEBOT_URL https://get.filebot.net/filebot/BETA/FileBot_$FILEBOT_VERSION-portable-jdk8.tar.xz
-ENV FILEBOT_SHA256 8c63e5abb78f236cb31bb08795984e03bcc09823d5f3026b16b4d8cf741b7530
+ENV FILEBOT_VERSION 4.9.0
+ENV FILEBOT_URL https://get.filebot.net/filebot/$FILEBOT_VERSION/FileBot_$FILEBOT_VERSION-portable.tar.xz
+ENV FILEBOT_SHA256 053d1cfe6a99cc211b1097e1ed1a7261addd370182a09a25a0ee45123e12bb7a
 
 ENV FILEBOT_HOME /opt/filebot
 
