--- a/Dockerfile.minimal
+++ b/Dockerfile.minimal
@@ -1,7 +1,7 @@
 FROM openjdk:14-alpine
 
 
-MAINTAINER Reinhard Pointner <rednoah@filebot.net>
+LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
 ENV FILEBOT_VERSION 4.9.2
