--- a/.github/workflows/docker.watcher.yml
+++ b/.github/workflows/docker.watcher.yml
@@ -1,6 +1,11 @@
 name: docker build filebot-watcher
 
 on:
+  workflow_run:
+    workflows:
+      - 'docker build filebot'
+    types:
+      - 'completed'
   push:
     paths:
       - 'Dockerfile.watcher'
