--- a/.github/workflows/docker.watcher.yml
+++ b/.github/workflows/docker.watcher.yml
@@ -22,6 +22,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
+        name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-watcher-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-watcher-buildx-
+      -
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
@@ -35,5 +43,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/filebot:watcher
-          cache-from: type=gha
-          cache-to: type=gha
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
