--- a/.github/workflows/docker.node.yml
+++ b/.github/workflows/docker.node.yml
@@ -26,9 +26,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-node-buildx-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-node-buildx-
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
