--- a/.github/workflows/docker.watcher.yml
+++ b/.github/workflows/docker.watcher.yml
@@ -39,7 +39,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          file: Dockerfile
+          file: Dockerfile.watcher
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/filebot:watcher
