--- a/.github/workflows/docker.watcher.yml
+++ b/.github/workflows/docker.watcher.yml
@@ -8,8 +8,9 @@ on:
       - 'completed'
   push:
     paths:
-      - 'Dockerfile.watcher'
       - '.github/workflows/docker.watcher.yml'
+      - 'Dockerfile.watcher'
+      - 'watcher/**'
 
 jobs:
   docker:
