--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,8 +3,9 @@ name: docker build filebot
 on:
   push:
     paths:
-      - 'Dockerfile'
       - '.github/workflows/docker.yml'
+      - 'Dockerfile'
+      - 'generic/**'
 
 jobs:
   docker:
