--- a/xpra/etc/xpra/xpra.conf
+++ b/xpra/etc/xpra/xpra.conf
@@ -5,7 +5,7 @@ webcam=no
 printing=no
 speaker=disabled
 microphone=disabled
-system-tray=off
+system-tray=no
 mdns=no
 notifications=no
 dbus-proxy=no
@@ -14,8 +14,4 @@ dbus-launch=no
 systemd-run=no
 file-transfer=off
 open-files=off
-forward-xdg-open=on
-min-quality=80
-encoding=rgb
-video-scaling=off
 html=on
