--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -13,7 +13,7 @@ ENV FILEBOT_NODE_HOME /opt/filebot-node
 
 RUN set -eux \
  ## ** install dependencies
- && apt-get update \
+ && curl -fsSL https://deb.nodesource.com/setup_lts.x | bash - \
  && apt-get install -y nodejs \
  && rm -rf /var/lib/apt/lists/* \
  ## ** fetch generic package
