--- a/Dockerfile.xpra
+++ b/Dockerfile.xpra
@@ -8,6 +8,7 @@ RUN set -eux \
  && curl -o "/etc/apt/sources.list.d/xpra.list" "https://xpra.org/repos/focal/xpra.list" \
  && apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra default-jre zenity openjfx \
+ && mkdir -m 777 -p /tmp/xdg/xpra \
  && ln -sf /usr/lib/xpra/xdg-open /usr/bin/xdg-open \
  && rm -rvf /usr/share/xpra/www/default-settings.* \
  && rm -rvf /var/lib/apt/lists/*
@@ -15,8 +16,6 @@ RUN set -eux \
 # install custom launcher scripts
 COPY xpra /
 
-
-ENV XDG_RUNTIME_DIR /tmp/xdg
 
 ENV XPRA_BIND 0.0.0.0
 ENV XPRA_PORT 5454
