--- a/Dockerfile.watcher
+++ b/Dockerfile.watcher
@@ -4,6 +4,7 @@ LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 COPY watcher /
 
-ENV SETTLE_DOWN_TIME 600
+ENV SETTLE_DOWN_TIME "600"
+ENV SETTLE_DOWN_CHECK "10 seconds ago"
 
 ENTRYPOINT ["/opt/bin/run-as-user", "/opt/bin/filebot-watcher"]
