--- a/Dockerfile.watcher
+++ b/Dockerfile.watcher
@@ -7,4 +7,4 @@ COPY watcher /
 ENV SETTLE_DOWN_TIME "300"
 ENV SETTLE_DOWN_CHECK "5 seconds ago"
 
-ENTRYPOINT ["/opt/bin/run-as-user", "/opt/bin/filebot-watcher"]
+ENTRYPOINT ["/opt/bin/run-as-user", "/opt/bin/run", "/opt/bin/filebot-watcher"]
