--- a/Dockerfile.xpra
+++ b/Dockerfile.xpra
@@ -4,10 +4,13 @@ LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
 RUN set -eux \
- && apt-key adv --fetch-keys "https://xpra.org/gpg.asc" \
- && curl -o "/etc/apt/sources.list.d/xpra.list" "https://xpra.org/repos/focal/xpra.list" \
+ && apt update \
+ && DEBIAN_FRONTEND=noninteractive apt install -y ca-certificates software-properties-common \
+ && add-apt-repository universe \
+ && curl -o "/usr/share/keyrings/xpra-2022.gpg" https://xpra.org/xpra-2022.gpg \
+ && curl -o "/etc/apt/sources.list.d/xpra.list" "https://xpra.org/repos/jammy/xpra.list" \
  && apt-get update \
- && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra default-jre zenity \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra openjdk-17-jre zenity \
  && mkdir -m 777 -p /tmp/xdg/xpra \
  && ln -sf /usr/lib/xpra/xdg-open /usr/bin/xdg-open \
  && rm -rvf /usr/share/xpra/www/default-settings.* \
@@ -24,4 +27,4 @@ ENV XPRA_AUTH none
 
 EXPOSE $XPRA_PORT
 
-ENTRYPOINT ["/opt/bin/run-as-user", "/opt/filebot-xpra/start"]
+ENTRYPOINT ["/opt/bin/run-as-user", "/opt/bin/run", "/opt/filebot-xpra/start"]
