--- a/Dockerfile.xpra
+++ b/Dockerfile.xpra
@@ -14,10 +14,8 @@ RUN set -eux \
  && mkdir -m 777 -p /tmp/xdg/xpra \
  && ln -sf /usr/lib/xpra/xdg-open /usr/bin/xdg-open \
  && rm -rvf /usr/share/xpra/www/default-settings.* \
- && rm -rvf /var/lib/apt/lists/*
-
-# silence xpra startup error messages
-RUN set -eux \
+ && rm -rvf /var/lib/apt/lists/* \
+ ## ** silence xpra startup error messages
  && chmod 777 /run/user \
  && mkdir /run/xpra \
  && chmod 775 /run/xpra \
