--- a/Dockerfile.xpra
+++ b/Dockerfile.xpra
@@ -10,7 +10,7 @@ RUN set -eux \
  && curl -o "/usr/share/keyrings/xpra-2022.gpg" https://xpra.org/xpra-2022.gpg \
  && curl -o "/etc/apt/sources.list.d/xpra.list" "https://xpra.org/repos/jammy/xpra.list" \
  && apt-get update \
- && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra openjdk-17-jre zenity \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y xpra openjdk-17-jre zenity xdg-utils \
  && mkdir -m 777 -p /tmp/xdg/xpra \
  && ln -sf /usr/lib/xpra/xdg-open /usr/bin/xdg-open \
  && rm -rvf /usr/share/xpra/www/default-settings.* \
