--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -1,9 +1,9 @@
-FROM rednoah/filebot
+FROM rednoah/filebot:xpra
 
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
-ENV FILEBOT_VERSION 5.0.3
+ENV FILEBOT_VERSION 5.1.0
 ENV FILEBOT_URL https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb
 
 
@@ -18,4 +18,4 @@ RUN set -eux \
  && sed -i 's/APP_DATA=.*/APP_DATA="$HOME"/g; s/-Dapplication.deployment=deb/-Dapplication.deployment=docker/g' /usr/bin/filebot
 
 
-ENTRYPOINT ["/opt/bin/run-as-user", "/opt/bin/run", "/usr/bin/filebot"]
+ENTRYPOINT ["/opt/bin/run-as-user", "/opt/bin/run", "/opt/filebot-xpra/start"]
