--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -3,19 +3,18 @@ FROM rednoah/filebot:xpra
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
-ENV FILEBOT_VERSION 5.1.0
-ENV FILEBOT_URL https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb
-
-
 RUN set -eux \
  ## ** uninstall stable release
  && DEBIAN_FRONTEND=noninteractive apt-get purge -y filebot \
  ## ** install latest revision
- && curl -o /tmp/filebot.deb "$FILEBOT_URL" \
+ && curl -o /tmp/filebot.deb "https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb" \
  && dpkg -i /tmp/filebot.deb \
  && rm -v /tmp/filebot.deb \
  ## ** apply custom application configuration
  && sed -i 's/APP_DATA=.*/APP_DATA="$HOME"/g; s/-Dapplication.deployment=deb/-Dapplication.deployment=docker/g' /usr/bin/filebot
+
+
+ENV FILEBOT_VERSION "$(filebot -version)"
 
 
 ENTRYPOINT ["/opt/bin/run-as-user", "/opt/bin/run", "/opt/filebot-xpra/start"]
