You have an error in your yaml syntax on line 5

--- a/.github/workflows/docker-beta.yml
+++ b/.github/workflows/docker-beta.yml
@@ -1,7 +1,7 @@
 name: docker build filebot-beta
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
   schedule:
       - cron: '0 0 * * 5'
   workflow_run:
