--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -2,6 +2,8 @@ FROM rednoah/filebot:xpra
 
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
+# build trigger and cache buster
+ENV FILEBOT_REVISION r9896
 
 ENV FILEBOT_VERSION 5.1.0
 ENV FILEBOT_URL https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb
