--- a/.github/workflows/docker.beta.yml
+++ b/.github/workflows/docker.beta.yml
@@ -35,3 +35,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/filebot:beta
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
