--- a/.github/workflows/docker.xpra.yml
+++ b/.github/workflows/docker.xpra.yml
@@ -1,48 +1,40 @@
 name: docker build filebot-xpra
 
 on:
-  workflow_run:
-    workflows:
-      - 'docker build filebot'
-    types:
-      - 'completed'
-  push:
-    paths:
-      - '.github/workflows/docker.xpra.yml'
-      - 'Dockerfile.xpra'
-      - 'xpra/**'
+	workflow_run:
+		workflows:
+			- 'docker build filebot'
+		types:
+			- 'completed'
+	push:
+		paths:
+			- '.github/workflows/docker.xpra.yml'
+			- 'Dockerfile.xpra'
+			- 'xpra/**'
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-xpra-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-xpra-buildx-
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          file: Dockerfile.xpra
-          push: true
-          platforms: linux/amd64,linux/arm64
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/filebot:xpra
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+	docker:
+		runs-on: ubuntu-latest
+		steps:
+			-
+				name: Set up QEMU
+				uses: docker/setup-qemu-action@v2
+			-
+				name: Set up Docker Buildx
+				uses: docker/setup-buildx-action@v2
+			-
+				name: Login to DockerHub
+				uses: docker/login-action@v2
+				with:
+					username: ${{ secrets.DOCKER_HUB_USERNAME }}
+					password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+			-
+				name: Build and push
+				uses: docker/build-push-action@v4
+				with:
+					file: Dockerfile.xpra
+					push: true
+					platforms: linux/amd64,linux/arm64
+					tags: ${{ secrets.DOCKER_HUB_USERNAME }}/filebot:xpra
+					cache-from: type=gha
+					cache-to: type=gha,mode=max
