Add convert and cwebp tools by default (experimental)

--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -3,8 +3,16 @@ FROM rednoah/filebot:xpra
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
+# additional dependencies
+RUN set -eux \
+ ## ** install dependencies
+ && apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y imagemagick webp \
+ && rm -rvf /var/lib/apt/lists/*
+
+
 # build trigger and cache buster
-ENV FILEBOT_REVISION r10169
+ENV FILEBOT_REVISION r10172
 
 
 ENV FILEBOT_VERSION 5.1.2
