Experiment with JetBrains Projector

--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -12,7 +12,7 @@ RUN set -eux \
 
 
 # build trigger and cache buster
-ENV FILEBOT_REVISION r10323
+ENV FILEBOT_REVISION r10323-projector
 
 
 ENV FILEBOT_VERSION 5.1.4
