--- a/webdav/usr/local/apache2/conf/httpd.conf
+++ b/webdav/usr/local/apache2/conf/httpd.conf
@@ -118,7 +118,7 @@ DocumentRoot "${ROOT}/"
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog /proc/self/fd/2
+ErrorLog /dev/stderr
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
