unlimited request limit

--- a/webdav/usr/local/apache2/conf/http.conf
+++ b/webdav/usr/local/apache2/conf/http.conf
@@ -6,6 +6,9 @@
     Require all denied
   </Directory>
 
+  # unlimited request limit
+  LimitRequestBody 0
+
   # make certain DAV methods work behind an SSL reverse proxy
   RequestHeader edit Destination ^https http early
 </VirtualHost>
