LimitXMLRequestBody 0 DavDepthInfinity on DavMinTimeout 120

--- a/webdav/usr/local/apache2/conf/dav.conf
+++ b/webdav/usr/local/apache2/conf/dav.conf
@@ -5,23 +5,28 @@ Alias / "${ROOT}/"
   # Enable WebDAV
   Dav On
 
-  # Ensure mod_autoindex is used
-  Options +Indexes
-
-  # Ensure mod_dir does not take precedence over mod_autoindex
-  DirectoryIndex disabled
-
-  ### Table configuration
-  IndexStyleSheet https://get.filebot.net/index/index.css
-  IndexOptions FancyIndexing NameWidth=* IconsAreLinks IconWidth=16 IconHeight=16 VersionSort FoldersFirst IgnoreClient SuppressDescription SuppressColumnSorting XHTML HTMLTable Charset=UTF-8
-
-  ## Auth
+  # Auth
   AuthType Digest
   AuthName "${REALM}"
   AuthUserFile "${HOME}/user.passwd"
   <RequireAny>
     Require valid-user
   </RequireAny>
+
+  # Limits
+  LimitXMLRequestBody 0
+  DavDepthInfinity on
+  DavMinTimeout 120
+
+  # Ensure mod_autoindex is used
+  Options +Indexes
+
+  # Ensure mod_dir does not take precedence over mod_autoindex
+  DirectoryIndex disabled
+
+  # Table configuration
+  IndexStyleSheet https://get.filebot.net/index/index.css
+  IndexOptions FancyIndexing NameWidth=* IconsAreLinks IconWidth=16 IconHeight=16 VersionSort FoldersFirst IgnoreClient SuppressDescription SuppressColumnSorting XHTML HTMLTable Charset=UTF-8
 </Directory>
 
 
