--- a/Dockerfile.projector
+++ b/Dockerfile.projector
@@ -3,6 +3,12 @@ FROM rednoah/filebot
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
+RUN set -eux \
+ && apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y openjdk-17-jre \
+ && rm -rvf /var/lib/apt/lists/*
+
+
 # REQUIRES FileBot r10340 OR HIGHER
 ENV FILEBOT_VERSION 5.1.4
 ENV FILEBOT_URL https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb
