ENV FILEBOT_REVISION r10344

--- a/Dockerfile.projector
+++ b/Dockerfile.projector
@@ -10,6 +10,7 @@ RUN set -eux \
 
 
 # REQUIRES FileBot r10340 OR HIGHER
+ENV FILEBOT_REVISION r10344
 ENV FILEBOT_VERSION 5.1.4
 ENV FILEBOT_URL https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb
 
