LegacyKeyValueFormat: "ENV key=value" should be used instead of legacy "ENV key value"

--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -12,11 +12,11 @@ RUN set -eux \
 
 
 # build trigger and cache buster
-ENV FILEBOT_REVISION=r10362
+ENV FILEBOT_REVISION="r10362"
 
 
-ENV FILEBOT_VERSION=5.1.4
-ENV FILEBOT_URL=https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb
+ENV FILEBOT_VERSION="5.1.4"
+ENV FILEBOT_URL="https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}_universal.deb"
 
 
 RUN set -eux \
