--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -3,12 +3,12 @@ FROM rednoah/filebot
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
-ENV FILEBOT_NODE_VERSION 0.4.7
-ENV FILEBOT_NODE_URL https://github.com/filebot/filebot-node/releases/download/$FILEBOT_NODE_VERSION/filebot-node_$FILEBOT_NODE_VERSION.tar.xz
-ENV FILEBOT_NODE_SHA256 479350e974e6f5fded581a54ff74c312a339a76ff86d9883261e94b051ca1a38
+ENV FILEBOT_NODE_VERSION="0.4.7"
+ENV FILEBOT_NODE_URL="https://github.com/filebot/filebot-node/releases/download/$FILEBOT_NODE_VERSION/filebot-node_$FILEBOT_NODE_VERSION.tar.xz"
+ENV FILEBOT_NODE_SHA256="479350e974e6f5fded581a54ff74c312a339a76ff86d9883261e94b051ca1a38"
 
 
-ENV FILEBOT_NODE_HOME /opt/filebot-node
+ENV FILEBOT_NODE_HOME="/opt/filebot-node"
 
 
 RUN set -eux \
@@ -31,9 +31,9 @@ RUN set -eux \
 COPY node /
 
 
-ENV FILEBOT_NODE_AUTH NONE
-ENV FILEBOT_NODE_HTTP YES
-ENV FILEBOT_NODE_HTTP_PORT 5452
+ENV FILEBOT_NODE_AUTH="NONE"
+ENV FILEBOT_NODE_HTTP="YES"
+ENV FILEBOT_NODE_HTTP_PORT="5452"
 
 
 EXPOSE $FILEBOT_NODE_HTTP_PORT
