--- a/Dockerfile.xpra
+++ b/Dockerfile.xpra
@@ -32,9 +32,9 @@ RUN set -eux \
 COPY xpra /
 
 
-ENV XPRA_BIND 0.0.0.0
-ENV XPRA_PORT 5454
-ENV XPRA_AUTH none
+ENV XPRA_BIND="0.0.0.0"
+ENV XPRA_PORT="5454"
+ENV XPRA_AUTH="none"
 
 
 EXPOSE $XPRA_PORT
