--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -3,11 +3,11 @@ FROM openjdk:17-alpine
 LABEL maintainer="Reinhard Pointner <rednoah@filebot.net>"
 
 
-ENV FILEBOT_VERSION 5.1.4
-ENV FILEBOT_URL https://get.filebot.net/filebot/FileBot_$FILEBOT_VERSION/FileBot_$FILEBOT_VERSION-portable.tar.xz
-ENV FILEBOT_SHA256 504806ddb413e463cc7e1fe7c42d5a5c6b1bf07284e4ebf96b1d142e32ebef75
+ENV FILEBOT_VERSION="5.1.4"
+ENV FILEBOT_URL="https://get.filebot.net/filebot/FileBot_$FILEBOT_VERSION/FileBot_$FILEBOT_VERSION-portable.tar.xz"
+ENV FILEBOT_SHA256="504806ddb413e463cc7e1fe7c42d5a5c6b1bf07284e4ebf96b1d142e32ebef75"
 
-ENV FILEBOT_HOME /opt/filebot
+ENV FILEBOT_HOME="/opt/filebot"
 
 
 RUN apk add --update mediainfo chromaprint p7zip unrar \
@@ -27,9 +27,9 @@ RUN set -eux \
  && ln -s /data /opt/filebot/data
 
 
-ENV HOME /data
-ENV LANG C.UTF-8
-ENV FILEBOT_OPTS "-Dapplication.deployment=docker -Dnet.filebot.archive.extractor=ShellExecutables -Duser.home=$HOME"
+ENV HOME="/data"
+ENV LANG="C.UTF-8"
+ENV FILEBOT_OPTS="-Dapplication.deployment=docker -Dnet.filebot.archive.extractor=ShellExecutables -Duser.home=$HOME"
 
 
 ENTRYPOINT ["/opt/filebot/filebot.sh"]
