Run JDK 21 tests

--- a/Dockerfile.beta
+++ b/Dockerfile.beta
@@ -12,6 +12,13 @@ ENV FILEBOT_URL="https://get.filebot.net/filebot/BETA/FileBot_${FILEBOT_VERSION}
 
 
 RUN set -eux \
+ && apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get remove -y openjdk-17-jre openjdk-17-jre-headless \
+ && DEBIAN_FRONTEND=noninteractive apt-get install -y openjdk-21-jre \
+ && rm -rvf /var/lib/apt/lists/*
+
+
+RUN set -eux \
  ## ** uninstall stable release
  && DEBIAN_FRONTEND=noninteractive apt-get purge -y filebot \
  ## ** install latest revision
